--- a/Assets/css/subjects.css
+++ b/Assets/css/subjects.css
@@ -46,6 +46,22 @@
     top: 0;
     width: 100%
   }
+
   .sticky + .content{
     padding-top: 120px
   }
+
+/* .model{
+  float:right;width:600px;height:600px;
+} */
+
+canvas{
+  max-width: 100%;
+  max-height: 100%;
+}
+
+@media screen and (max-width:1400px){
+  .model{
+    width: 100%;
+  }
+}
