--- a/Assets/css/subjects.css
+++ b/Assets/css/subjects.css
@@ -50,7 +50,8 @@ p.modelDesc{
   .sticky{
     position: fixed;
     top: 0;
-    width: 100%
+    width: 100%;
+    box-shadow: 0px 0px 20px 5px #00000094;
   }
 
   .sticky + .content{
