--- a/Assets/css/subjects.css
+++ b/Assets/css/subjects.css
@@ -82,7 +82,7 @@ p.modelDesc{
     }
   }
 
-#model{
+div[id^="model"]{
   float:right;
   width:600px;
   height:600px;
@@ -95,7 +95,7 @@ canvas{
 }
 
 @media screen and (max-width:1400px){
-  #model{
+  div[id^="model"]{
     width: 100%;
     float:left;
   }
@@ -242,4 +242,16 @@ body {
   .footer__nav {
     flex: 2 0px;
   }
+}
+
+
+
+#c{
+  position: fixed;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    display: block;
+    z-index: -1;
 }
