Revert "Merge branch 'secondPageBranch' of https://github.com/mmartinez18/ScholAR2 into secondPageBranch"
This reverts commit 1c2dc389fe31583eb54aff4879efffcbd0dce146, reversing
changes made to dec58e87114be6c9fe6d5b0de4cd45f5437fcf1d.

--- a/Assets/css/subjects.css
+++ b/Assets/css/subjects.css
@@ -82,7 +82,7 @@ p.modelDesc{
     }
   }
 
-div[id^="model"]{
+#model{
   float:right;
   width:600px;
   height:600px;
@@ -95,7 +95,7 @@ canvas{
 }
 
 @media screen and (max-width:1400px){
-  div[id^="model"]{
+  #model{
     width: 100%;
     float:left;
   }
@@ -242,16 +242,4 @@ body {
   .footer__nav {
     flex: 2 0px;
   }
-}
-
-
-
-#c{
-  position: fixed;
-    left: 0;
-    top: 0;
-    width: 100vw;
-    height: 100vh;
-    display: block;
-    z-index: -1;
 }
