new logo + header color swap

--- a/Assets/css/subjects.css
+++ b/Assets/css/subjects.css
@@ -41,7 +41,7 @@ p.modelDesc{
 
   .header {
     padding: 10px 16px;
-    background: #007cc7;
+    background: #FF7F50;
     color: #f1f1f1;
   }
   .content{
